Source/WebCore/css/MediaQueryEvaluator.cpp
@@ -58,50 +58,40 @@ using namespace MediaFeatureNames;
 
 enum MediaFeaturePrefix { MinPrefix, MaxPrefix, NoPrefix };
 
-typedef bool (*EvalFunc)(CSSValue*, RenderStyle*, Frame*, MediaFeaturePrefix);
-typedef HashMap<AtomicStringImpl*, EvalFunc> FunctionMap;
-static FunctionMap* gFunctionMap;
+typedef bool (*MediaFeatureEvaluationFunction)(CSSValue*, RenderStyle*, Frame*, MediaFeaturePrefix);
+typedef HashMap<AtomicStringImpl*, MediaFeatureEvaluationFunction> FunctionMap;
 
-/*
- * FIXME: following media features are not implemented: color_index, scan, resolution
- *
- * color_index, min-color-index, max_color_index: It's unknown how to retrieve
- * the information if the display mode is indexed
- * scan: The "scan" media feature describes the scanning process of
- * tv output devices. It's unknown how to retrieve this information from
- * the platform
- * resolution, min-resolution, max-resolution: css parser doesn't seem to
- * support CSS_DIMENSION
- */
+// FIXME: color-index, min-color-index, and max-color-index are not implemented.
+// To implement them we'd have to add information about indexed color to the WebCore platform;
+// most modern platforms don't make use of indexed color, so it's not clear this is worthwhile.
 
-MediaQueryEvaluator::MediaQueryEvaluator(bool mediaFeatureResult)
-    : m_frame(0)
-    , m_style(0)
-    , m_expResult(mediaFeatureResult)
-{
-}
+// FIXME: scan is not implemented: This media feature describes the scanning process of
+// TV output devices. To implement this we'd have to add information to the WebCore platform.
 
-MediaQueryEvaluator:: MediaQueryEvaluator(const String& acceptedMediaType, bool mediaFeatureResult)
+// FIXME: resolution, min-resolution, max-resolution are not implemented: At the time this
+// was originally written the author said the CSS parser "didn't seem to support CSS_DIMENSION".
+
+MediaQueryEvaluator::MediaQueryEvaluator(const String& acceptedMediaType, bool mediaFeatureResult)
     : m_mediaType(acceptedMediaType)
     , m_frame(0)
     , m_style(0)
-    , m_expResult(mediaFeatureResult)
+    , m_mediaFeatureResult(mediaFeatureResult)
 {
 }
 
-MediaQueryEvaluator:: MediaQueryEvaluator(const char* acceptedMediaType, bool mediaFeatureResult)
+MediaQueryEvaluator::MediaQueryEvaluator(const char* acceptedMediaType, bool mediaFeatureResult)
     : m_mediaType(acceptedMediaType)
     , m_frame(0)
     , m_style(0)
-    , m_expResult(mediaFeatureResult)
+    , m_mediaFeatureResult(mediaFeatureResult)
 {
 }
 
-MediaQueryEvaluator:: MediaQueryEvaluator(const String& acceptedMediaType, Frame* frame, RenderStyle* style)
+MediaQueryEvaluator::MediaQueryEvaluator(const String& acceptedMediaType, Frame* frame, RenderStyle* style)
     : m_mediaType(acceptedMediaType)
     , m_frame(frame)
     , m_style(style)
-    , m_expResult(false) // doesn't matter when we have m_frame and m_style
+    , m_mediaFeatureResult(false) // Ignored if both m_frame and m_style are non-null.
 {
 }
 
@@ -136,35 +126,35 @@ bool MediaQueryEvaluator::eval(const MediaQuerySet* querySet, StyleResolver* sty
         return true;
 
     const Vector<OwnPtr<MediaQuery> >& queries = querySet->queryVector();
-    if (!queries.size())
-        return true; // empty query list evaluates to true
 
-    // iterate over queries, stop if any of them eval to true (OR semantics)
-    bool result = false;
-    for (size_t i = 0; i < queries.size() && !result; ++i) {
-        MediaQuery* query = queries[i].get();
+    bool result = true;
 
-        if (query->ignored())
+    // Iterate over queries and stop if any of them eval to true ("or" semantics).
+    for (size_t i = 0; i < queries.size(); ++i) {
+        const MediaQuery& query = *queries[i];
+
+        result = false;
+
+        if (query.ignored())
             continue;
 
-        if (mediaTypeMatch(query->mediaType())) {
-            const Vector<OwnPtr<MediaQueryExp> >* exps = query->expressions();
+        if (mediaTypeMatch(query.mediaType())) {
+            const Vector<OwnPtr<MediaQueryExp> >& expressions = query.expressions();
             // iterate through expressions, stop if any of them eval to false
             // (AND semantics)
             size_t j = 0;
-            for (; j < exps->size(); ++j) {
-                bool exprResult = eval(exps->at(j).get());
-                if (styleResolver && exps->at(j)->isViewportDependent())
-                    styleResolver->addViewportDependentMediaQueryResult(exps->at(j).get(), exprResult);
-                if (!exprResult)
+            for (; j < expressions.size(); ++j) {
+                result = eval(*expressions[j]);
+                if (styleResolver && expressions[j]->isViewportDependent())
+                    styleResolver->addViewportDependentMediaQueryResult(*expressions[j], result);
+                if (!result)
                     break;
             }
+        }
 
-            // assume true if we are at the end of the list,
-            // otherwise assume false
-            result = applyRestrictor(query->restrictor(), exps->size() == j);
-        } else
-            result = applyRestrictor(query->restrictor(), false);
+        result = applyRestrictor(query.restrictor(), result);
+        if (result)
+            break;
     }
 
     return result;
@@ -263,7 +253,7 @@ static bool aspect_ratioMediaFeatureEval(CSSValue* value, RenderStyle*, Frame* f
         int h = 0;
         int v = 0;
         if (parseAspectRatio(value, h, v))
-            return v != 0 && compareValue(width * v, height * h, op);
+            return v && compareValue(width * v, height * h, op);
         return false;
     }
 
@@ -279,7 +269,7 @@ static bool device_aspect_ratioMediaFeatureEval(CSSValue* value, RenderStyle*, F
         int h = 0;
         int v = 0;
         if (parseAspectRatio(value, h, v))
-            return v != 0  && compareValue(static_cast<int>(sg.width()) * v, static_cast<int>(sg.height()) * h, op);
+            return v && compareValue(static_cast<int>(sg.width()) * v, static_cast<int>(sg.height()) * h, op);
         return false;
     }
 
@@ -503,68 +493,51 @@ static bool transform_2dMediaFeatureEval(CSSValue* value, RenderStyle*, Frame*, 
 
 static bool transform_3dMediaFeatureEval(CSSValue* value, RenderStyle*, Frame* frame, MediaFeaturePrefix op)
 {
-    bool returnValueIfNoParameter;
-    int have3dRendering;
-
-#if ENABLE(3D_RENDERING)
     bool threeDEnabled = false;
-#if USE(ACCELERATED_COMPOSITING)
+#if ENABLE(3D_RENDERING) && USE(ACCELERATED_COMPOSITING)
     if (RenderView* view = frame->contentRenderer())
         threeDEnabled = view->compositor()->canRender3DTransforms();
-#endif
-
-    returnValueIfNoParameter = threeDEnabled;
-    have3dRendering = threeDEnabled ? 1 : 0;
 #else
     UNUSED_PARAM(frame);
-    returnValueIfNoParameter = false;
-    have3dRendering = 0;
 #endif
-
     if (value) {
         float number;
-        return numberValue(value, number) && compareValue(have3dRendering, static_cast<int>(number), op);
+        return numberValue(value, number) && compareValue(static_cast<int>(threeDEnabled), static_cast<int>(number), op);
     }
-    return returnValueIfNoParameter;
+    return threeDEnabled;
 }
 
 static bool view_modeMediaFeatureEval(CSSValue* value, RenderStyle*, Frame* frame, MediaFeaturePrefix op)
 {
-    UNUSED_PARAM(op);
+    ASSERT_UNUSED(op, op == NoPrefix);
     if (!value)
         return true;
     return Page::stringToViewMode(static_cast<CSSPrimitiveValue*>(value)->getStringValue()) == frame->page()->viewMode();
 }
 
-static void createFunctionMap()
+static FunctionMap* createFunctionMap()
 {
-    // Create the table.
-    gFunctionMap = new FunctionMap;
+    FunctionMap* functionMap = new FunctionMap;
 #define ADD_TO_FUNCTIONMAP(name, str)  \
-    gFunctionMap->set(name##MediaFeature.impl(), name##MediaFeatureEval);
+    functionMap->set(name##MediaFeature.impl(), name##MediaFeatureEval);
     CSS_MEDIAQUERY_NAMES_FOR_EACH_MEDIAFEATURE(ADD_TO_FUNCTIONMAP);
 #undef ADD_TO_FUNCTIONMAP
+    return functionMap;
 }
 
-bool MediaQueryEvaluator::eval(const MediaQueryExp* expr) const
+bool MediaQueryEvaluator::eval(const MediaQueryExp& expression) const
 {
     if (!m_frame || !m_style)
-        return m_expResult;
+        return m_mediaFeatureResult;
 
-    if (!expr->isValid())
+    if (!expression.isValid())
         return false;
 
-    if (!gFunctionMap)
-        createFunctionMap();
+    static FunctionMap* functionMap = createFunctionMap();
+    MediaFeatureEvaluationFunction function = functionMap->get(expression.mediaFeature().impl());
 
-    // call the media feature evaluation function. Assume no prefix
-    // and let trampoline functions override the prefix if prefix is
-    // used
-    EvalFunc func = gFunctionMap->get(expr->mediaFeature().impl());
-    if (func)
-        return func(expr->value(), m_style.get(), m_frame, NoPrefix);
-
-    return false;
+    // Start with no prefix: Some trampoline functions add the prefix and call other media feature functions.
+    return function && function(expression.value(), m_style.get(), m_frame, NoPrefix);
 }
 
 } // namespace
